working score incrementing through DOM manipulation

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@ h2 {
 }
 
 .background {
-  background-image: url("/assets/background/3.jpg");
+  background-image: url("/assets/background/10.jpeg");
   background-size: cover;
 }
 
