--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,12 @@ h2 {
   background-size: cover;
 }
 
+.landing-card {
+  background-image: url("/assets/background/main-card.jpg");
+  /* background-size: cover; */
+  /* background-color: red; */
+}
+
 .header {
   display: flex;
   justify-content: space-between;
