added game instructions and landing page

--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,9 @@
   visibility: hidden;
 }
 
+strong {
+  color: maroon;
+}
 /* h1 {
   font-family: Garamond, Helvetica, sans-serif;
   color: #214e5b;
